# flakes

./: README.md  flake.nix
template/cabal/: .gitignore  flake.nix  hello-world.cabal
template/cabal-project/: cabal-project.cabal  flake.nix
template/cabal-project/app/: Main.hs
template/cabal-projects/: README.md
template/cabal-projects/src/project1/: project1.cabal
template/cabal-projects/src/project1/test/: Spec.hs
template/cabal-projects/src/project2/: project2.cabal
template/cabal/app/: Main.hs
template/cabal/src/: MyLib.hs
template/cabal/src/optics-exe/: CHANGELOG.md
template/cabal/src/optics-exe/app/: Main.hs
template/cabal/src/optics-lens/: CHANGELOG.md
template/cabal/src/optics-lens/src/: MyLib.hs
template/cabal/test/: Main.hs  Spec.hs
template/multi-project-cabal/: README.md  cabal.project  flake.nix
template/multi-project-cabal/src/optics-exe/: optics-exe.cabal
template/multi-project-cabal/src/optics-lens/: optics-lens.cabal
template/multi-project-cabal/src/project1/src/: MyLib.hs
template/multi-project-cabal/src/project1/test/Tests/: NaiveSpecs.hs
template/multi-project-cabal/src/project2/src/: MyLib.hs
template/multi-project-cabal/src/project2/test/: Spec.hs
template/multi-project-cabal/src/project2/test/Tests/: NaiveSpecs.hs
template/nix_basic/: flake.nix
template/rust/: flake.nix
template/single-project-cabal/: single-project-cabal.cabal
template/tex/: flake.nix
template/typescript/: .eslintrc.cjs  .gitignore  flake.nix
