cabal-version:   3.4
name:            single-project-cabal
version:         0.1.0.0

-- synopsis:
-- description:
-- license:         BSD-3-Clause
-- license-file:    LICENSE

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions: TemplateHaskell
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fno-warn-name-shadowing

-- -ddump-derive

library
  import:           base,project-config
  exposed-modules:  MyLib

  -- other-modules:
  -- other-extensions:
  build-depends:
    , array
    , bytestring
    , containers
    , lens
    , mtl
    , text
    , vector

  hs-source-dirs:   src
  default-language: GHC2021

test-suite single-project-cabal-test
  import:         base,project-config

  -- other-modules:
  -- other-extensions:
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Spec.hs
  build-depends:
    , single-project-cabal
    , tasty
    , tasty-hunit
