cabal-version:   3.4
name:            optics-exe
version:         0.1.0.0

-- synopsis:
-- description:
license:         BSD-3-Clause
license-file:    LICENSE

-- author:
-- maintainer:
-- copyright:
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common base
  build-depends: base >=4.9 && <5

common project-config
  default-language:   GHC2021
  default-extensions: TemplateHaskell
  ghc-options:
    -Wall -Wcompat -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -fno-warn-name-shadowing

-- -ddump-derive

common warnings
  ghc-options: -Wall

executable optics-exe
  import:         base,project-config
  main-is:        Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , bytestring
    , optics-lens
    , text

  hs-source-dirs: app
